aanpassing windowsMethode